# terrain_gen

./: Cargo.toml  README.md  test-terrain.csv
src/: erosion.rs  erosion_culm.rs  graphing.rs  main.rs  midpoint.rs  renderer.rs  terrain.rs  utils.rs  viewer.rs
src/renderer/: renderer_2d.rs
src/terrain/: erosion.rs  erosion_culm.rs  midpoint.rs
