[package]
name = "terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
plotters = "^0.3.1"
image = "0.24.2"
piston = "*"
piston_window = "*"
plotters-piston = "*"
systemstat = "*"
